--- a/src/footer.css
+++ b/src/footer.css
@@ -38,8 +38,44 @@
 }
 
 
+@media (max-width: 1024px) {
+  .footer-left,
+  .footer-right {
+    margin: 0 2rem;
+  }
+}
+
 @media (max-width: 768px) {
   .footer {
     padding: 1rem 0 0.5rem;
+  }
+
+  .footer-container {
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: center;
+  }
+
+  .footer-left {
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin: 0 1.5rem;
+  }
+
+  .footer-right {
+    justify-content: center;
+    margin: 0 1.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer-left,
+  .footer-right {
+    margin: 0 1rem;
+  }
+
+  .footer-right img {
+    width: 1.25rem;
+    height: 1.25rem;
   }
 }
